# rust_site

./: .gitignore  Cargo.toml  foo.html  readme.md  test.data
migrations/2019-09-18-175432_create_posts/: up.sql
src/: db.rs  gql_schema.rs  main.rs  schema.rs  site.md
src/graphql_schema/: context.rs  mod.rs  schema.rs
src/models/: mod.rs  posts.rs  user.rs
