[package]
name = "rust_site"
version = "0.1.0"
authors = ["lantos <l.leong1618@gmail.com>"]
edition = "2018"

[dependencies]
listenfd = "0.3.3"
diesel = { version = "1.4.2", features = ["sqlite", "r2d2"] }
dotenv = "0.14.1"
actix-web = "1.0.7"
env_logger = "0.6"
futures = "0.1"
serde = "1.0"
log = "0.4.8"
serde_json = "1.0"
serde_derive = "1.0"
juniper = "0.13.1"